style.css
* {
   box-sizing: border-box;
}

.resume {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji",
      "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 16px;
   line-height: 1.5;
   word-wrap: break-word;
}

.container {
   width: 980px;
   margin: 0 auto;
}

.resume__subtitle {
}
.title {
   border-bottom: 1px solid #eaecef;
   padding-bottom: 0.3em;
   font-size: 1.5em;
   font-weight: 600;
   line-height: 1.25;
   margin-top: 24px;
   margin-bottom: 16px;
}

.code pre {
   padding: 16px;
   overflow: auto;
   font-size: 85%;
   line-height: 1.45;
   background-color: #f6f8fa;
   border-radius: 3px;
}

.footer {
   background-color: rgb(228, 228, 228);
}

.footer h4 {
   padding: 0;
   margin: 0;
}

.footer__wrapper {
   width: 300px;
   height: 100px;
   margin: 0 auto;

   display: flex;
   justify-content: space-around;
   align-items: center;
}

.footer__rsschool {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
}

.footer__contacts {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
}

